<resources>
    <string name="app_name">NextTrip</string>
    <string name="title_activity_maps">Map</string>
    <string name="country_code">+234</string>
    <string name="phone_number_hint">+234 XXX XXX XXX</string>
    <string name="input_phone_number_hint">Input phone number</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="tell_us_who_you_are">Tell us who you are</string>
    <string name="sign_in_facebook">Sign In With Facebook</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="sign_in_sms_otp">Request OTP Via SMS</string>s
    <string name="sign_in_mail_otp">Request OTP Via Mail</string>
    <string name="sign_in_phone_call">Request Phone Call</string>
    <string name="email_hint">example@email.com</string>
    <string name="begin_next_trip">Start your Next Trip</string>
    <string name="other_method">Click button below to proceed</string>
    <string name="enter_verification_code">Please enter verification code sent via sms and mail</string>
    <string name="verification_code_sent_to">Verification code sent to </string>
    <string name="resending_sms_in">Resending sms and mail in </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_hint">Four digit security code</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Ride In Comfort and Style</string>
    <string name="slide_1_desc">Move the way you want, tap your phone. Get where you\'re headed.</string>
    <string name="slide_2_title">Book A Ride</string>
    <string name="slide_2_desc">You can rent a car and be your own driver</string>
    <string name="slide_3_title">Earn With Us</string>
    <string name="slide_3_desc">Become a NextTrip Driver and make more money</string>
    <string name="slide_4_title">Safety</string>
    <string name="slide_4_desc">We are committed to helping riders and drivers get where they want to go with confidence</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="my_trips">My Trips</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="promo">Promo</string>
    <string name="start_driving">Start Driving</string>
    <string name="help">Help</string>
    <string name="car_rentals">Car Rentals</string>
    <string name="username_holder">John Doe</string>
    <string name="action_about">About App</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="give_password_hint">Enter Password To Login</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="email">Email Address</string>
    <string name="choose_role">Register As:</string>
    <string-array name="role_array">
        <item>Driver</item>
        <item>Rider</item>
    </string-array>
    <string name="car_model">Car Model</string>
    <string name="icon_location">&#xf124;</string>
    <string name="pick">Pickup Location </string>
    <string name="icon_drop">&#xf041;</string>
    <string name="drop">Drop Location</string>
</resources>
