<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <!-- <Button
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="11dp"
        android:onClick="goToPhoneNumber"
        android:background="@drawable/ic_arrow_back_black_24dp" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Almost Done"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:layout_marginBottom="10dp"
            android:textColor="#c95a0e"
            android:layout_marginStart="20dp" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#c95a0e"
            android:id="@+id/reg_first_name"
            android:inputType="textPersonName"
            app:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:layout_marginStart="20dp"
            android:textColor="#c95a0e"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#c95a0e"
            android:inputType="textPersonName"
            app:backgroundTint="@color/colorPrimary"
            android:id="@+id/reg_lastname"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="20dp"
            android:textColor="#c95a0e"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#c95a0e"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/colorPrimary"
            android:id="@+id/reg_email"/>


    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_forward_white_24dp"
        android:background="@drawable/ic_arrow_forward_white_24dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        android:id="@+id/button_verify"
        android:onClick="proceedButton"
        android:contentDescription="@string/app_name"
        />

</RelativeLayout>