<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_Background">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:text="@string/enter_phone_number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/phone_number_hint"
        android:paddingLeft="15dp"
        android:inputType="phone"
        android:id="@+id/authenticate_phone"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingRight="15dp"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="start|bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/other_method"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end|bottom"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                android:background="@drawable/ic_arrow_forward_white_24dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:id="@+id/button_verify"
                android:onClick="validate_PhoneNumber"
                />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>